# tauri-plugin-share

./: .gitignore  Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js
android/: build.gradle.kts
android/src/main/java/: SharePlugin.kt
ios/Sources/: SharePlugin.swift
