[package]
name = "tauri-plugin-share"
version = "2.0.3"
authors = [ "lindongchen","zhangcheng" ]
description = "A Tauri share plugin"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/shares", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-share"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lindongchen/tauri-plugin-share"
documentation = "https://docs.rs/tauri-plugin-share"

[dependencies]
tauri = { version = "2.0.6" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
